<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/general"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="175dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/displayNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/empty"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="198dp" />

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/one"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textSize="34sp"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3"
            android:layout_weight="0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textSize="34sp"
            android:text="@string/three" />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textSize="34sp"
            android:layout_weight="1"
            android:text="+" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/four"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textSize="34sp"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6"
            android:layout_weight="0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textSize="34sp"
            android:text="@string/six" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="34sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/seven"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textSize="34sp"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button9"
            android:layout_weight="0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textSize="34sp"
            android:text="@string/nine" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:text="@string/seven"
            android:textSize="34sp" />

        <Button
            android:id="@+id/div_button"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="34sp" />


    </LinearLayout>

</LinearLayout>